--- a/app/src/main/res/layout/content_login.xml
+++ b/app/src/main/res/layout/content_login.xml
@@ -40,4 +40,10 @@
         android:inputType="textPassword"
         android:ems="10"
         android:id="@+id/editText2" />
+
+    <Button
+        android:text="@string/login_bt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/button2" />
 </LinearLayout>
